@@ -48,18 +48,6 @@ tracker_module_get_name (void)
 	return "Files";
 }
 
-static void 
-insert_data_to_metadata (GHashTable *metadata, const gchar *name, gchar *value)
-{
-	TrackerField *field_def = tracker_ontology_get_field_def (name);
-	
-	if (field_def) {
-		g_hash_table_insert (metadata, 
-				     g_object_ref (field_def), 
-				     value);
-	}
-}
-
 static void
 tracker_metadata_get_embedded (const char *path,
 			       const char *mimetype,
@@ -137,9 +125,8 @@ tracker_metadata_get_embedded (const char *path,
 		if (!utf_value)
 			continue;
 
-		insert_data_to_metadata (table, 
-					 tracker_ontology_get_field_def (name), 
-					 utf_value);
+		/* FIXME: name should be const */
+		g_hash_table_insert (table, g_strdup (name), utf_value);
 	}
 
 	g_strfreev (values);
@@ -228,52 +215,39 @@ tracker_module_file_get_metadata (TrackerFile *file)
 	}
 
 	g_lstat (path, &st);
-	metadata = g_hash_table_new_full (g_direct_hash, g_direct_equal,
-					  (GDestroyNotify) g_object_unref,
+	metadata = g_hash_table_new_full (g_str_hash, g_str_equal,
+					  NULL,
 					  (GDestroyNotify) g_free);
 	ext = strrchr (path, '.');
 
 	if (ext) {
-		g_hash_table_insert (metadata, 
-				     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_EXT)), 
-				     g_strdup (ext + 1));
+		g_hash_table_insert (metadata, METADATA_FILE_EXT, g_strdup (ext + 1));
 	}
 
 	mimetype = tracker_file_get_mime_type (path);
 
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_NAME), 
-				 g_filename_display_basename (path));
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_PATH),
-				 g_path_get_dirname (path));
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_NAME_DELIMITED),
-				 g_filename_to_utf8 (path, -1, NULL, NULL, NULL));
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_MIMETYPE), 
-				 mimetype);
+	g_hash_table_insert (metadata, METADATA_FILE_NAME, g_filename_display_basename (path));
+	g_hash_table_insert (metadata, METADATA_FILE_PATH, g_path_get_dirname (path));
+	g_hash_table_insert (metadata, METADATA_FILE_NAME_DELIMITED,
+			     g_filename_to_utf8 (path, -1, NULL, NULL, NULL));
+	g_hash_table_insert (metadata, METADATA_FILE_MIMETYPE, mimetype);
 
 	if (S_ISLNK (st.st_mode)) {
 		gchar *link_path;
 
 		link_path = g_file_read_link (path, NULL);
-		insert_data_to_metadata (metadata, 
-					 tracker_ontology_get_field_def (METADATA_FILE_LINK),
-					 g_filename_to_utf8 (link_path, -1, NULL, NULL, NULL));
+		g_hash_table_insert (metadata, METADATA_FILE_LINK,
+				     g_filename_to_utf8 (link_path, -1, NULL, NULL, NULL));
 		g_free (link_path);
 	}
 
 	/* FIXME: These should be dealt directly as integer/times/whatever, not strings */
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_SIZE),
-				 tracker_uint_to_string (st.st_size));
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_MODIFIED),
-				 tracker_uint_to_string (st.st_mtime));
-	insert_data_to_metadata (metadata, 
-				 tracker_ontology_get_field_def (METADATA_FILE_ACCESSED),
-				 tracker_uint_to_string (st.st_atime));
+	g_hash_table_insert (metadata, METADATA_FILE_SIZE,
+			     tracker_uint_to_string (st.st_size));
+	g_hash_table_insert (metadata, METADATA_FILE_MODIFIED,
+			     tracker_uint_to_string (st.st_mtime));
+	g_hash_table_insert (metadata, METADATA_FILE_ACCESSED,
+			     tracker_uint_to_string (st.st_atime));
 
 	tracker_metadata_get_embedded (path, mimetype, metadata);
 
